# Graph_Rag

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: config.py
data/: Accounting.txt  Accounting_entity.txt  Accounting_period.txt  Austerity.txt  Bookkeeping.txt  Customer_Profitability_Analysis.txt  DIRTI_5.txt  Data_valuation.txt  Depreciation.txt  Direct_costs.txt  Equivalence_number_method.txt  Financial_close_management.txt  Fiscal_pedaling.txt  Flotation_cost.txt  Flux_Analysis.txt  General_account.txt  Index_of_accounting_articles.txt  Interaction_cost.txt  Intercompany_accounting.txt  International_Ethics_Standards_Board_for_Accountants.txt  Kakeibo.txt  Liquidation.txt  Lookthrough_earnings.txt  Makerchecker.txt  Multilateral_exchange.txt  OpenTuition.txt  Outline_of_accounting.txt  Profit_motive.txt  Shrinkage_accounting.txt  Sum_of_Digits_depreciation.txt  Tone_at_the_top.txt
src/: main.py
src/utils/: document_loader.py  neo4j_helper.py  ollama_helper.py
tests/: test_document_loader.py  test_neo4j_helper.py  test_ollama_helper.py
